Fixing Figma #233 DEI spacing

--- a/web/wp-content/themes/cncf-twenty-two/source/scss/detached/kccnc-eu-22-transparency.scss
+++ b/web/wp-content/themes/cncf-twenty-two/source/scss/detached/kccnc-eu-22-transparency.scss
@@ -1623,7 +1623,7 @@ html {
 				}
 				img {
 					margin-top: 30px;
-					margin-bottom: 20px;
+					margin-bottom: 25px;
 				}
 			}
 			&__table {
